add more example

--- a/test/example.html
+++ b/test/example.html
@@ -2,6 +2,12 @@
 <html>
   <body>
     <div>
+      <p>
+        foo <a href="http://www.xxxx.com/yyyy/zzzz/">hoge</a>
+        <br />
+        far https://github.com/hi-ogawa/ahrefy to
+        <br />
+      </p>
       <ul>
         <li>http://www.xxxx.com/yyyy/zzzz/</li>
         <li><a href="http://this-is-already/link">this is already link</a></li>
