--- a/src/test.after.html
+++ b/src/test.after.html
@@ -1,7 +1,7 @@
 <div>
   <span><span>
     <a href="http://www.xxxx.com/yyyy/zzzz">http://www.xxxx.com/yyyy/zzzz</a> bla bla ...
-    http://www.xxxx.com/yyyy/zzzz
+    <a href="http://www.xxxx.com/yyyy/zzzz">http://www.xxxx.com/yyyy/zzzz</a>
   </span></span>
   <p>
     foo <a href="http://www.xxxx.com/yyyy/zzzz/">hoge</a>
